--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -153,7 +153,7 @@ body {
 		color: var(--color-primary-text);
 		border-bottom: 2px dotted var(--color-main-background);
 		&:hover, &:focus {
-			color: nc-lighten($color-main-text, 86%);
+			color: var(--color-primary-text-dark);
 		}
 	}
 }
@@ -170,7 +170,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-	background: nc-darken($color-main-background, 14%);
+	background: var(--color-background-darker);
 	border-radius: var(--border-radius);
 }
 
@@ -300,7 +300,7 @@ body {
 }
 
 #emptycontent, .emptycontent {
-	color: nc-lighten($color-main-text, 53%);
+	color: var(--color-text-maxcontrast);
 	text-align: center;
 	margin-top: 30vh;
 	width: 100%;
@@ -360,7 +360,7 @@ body {
 		}
 		a {
 			color: var(--color-primary-text);
-			border-bottom: 1px solid nc-darken($color-main-background, 27%);
+			border-bottom: 1px solid var(--color-background-darker);
 		}
 	}
 	.infogroup {
@@ -613,7 +613,6 @@ label.infield {
 }
 
 /* Database selector */
-
 #body-login {
 	form #selectDbType {
 		text-align: center;
@@ -626,17 +625,17 @@ label.infield {
 			position: static;
 			margin: 0 -3px 5px;
 			font-size: 12px;
-			background: nc-darken($color-main-background, 3%);
-			color: nc-lighten($color-main-text, 53%);
+			background: var(--color-background-dark);
+			color: var(--color-text-lighter);
 			cursor: pointer;
-			border: 1px solid nc-darken($color-main-background, 14%);
+			border: 1px solid var(--color-border-dark);
 			span {
 				cursor: pointer;
 				padding: 10px 20px;
 			}
 			&.ui-state-hover, &.ui-state-active {
 				color: var(--color-main-text);
-				background-color: nc-darken($color-main-background, 8%);
+				background-color: var(--color-border);
 			}
 		}
 	}
@@ -688,7 +687,7 @@ label.infield {
 		color: var(--color-primary-text) !important;
 		font-weight: 600 !important;
 		&.button {
-			color: nc-lighten($color-main-text, 33%) !important;
+			color: var(--color-text-lighter) !important;
 			display: inline-block;
 			text-align: center;
 		}
@@ -919,7 +918,7 @@ tr {
 
 tbody tr {
 	&:hover, &:focus, &:active {
-		background-color: nc-darken($color-main-background, 3%);
+		background-color: var(--color-background-dark);
 	}
 }
 
@@ -992,7 +991,7 @@ code {
 	.ui-datepicker-calendar {
 		th {
 			font-weight: normal;
-			color: nc-lighten($color-main-text, 33%);
+			color: var(--color-text-lighter);
 			opacity: .8;
 			width: 26px;
 			padding: 2px;
@@ -1002,7 +1001,7 @@ code {
 		}
 		td {
 			&.ui-datepicker-today a:not(.ui-state-hover) {
-				background-color: nc-lighten($color-main-text, 86%);
+				background-color: var(--color-background-darker);
 			}
 
 			&.ui-datepicker-current-day a.ui-state-active,
@@ -1015,7 +1014,7 @@ code {
 
 			&.ui-datepicker-week-end:not(.ui-state-disabled) :not(.ui-state-hover),
 			.ui-priority-secondary:not(.ui-state-hover) {
-				color: nc-lighten($color-main-text, 33%);
+				color: var(--color-text-lighter);
 				opacity: .8;
 			}
 		}
@@ -1023,7 +1022,7 @@ code {
 }
 
 .ui-datepicker-prev, .ui-datepicker-next {
-	border: nc-darken($color-main-background, 14%);
+	border: var(--color-border-dark);
 	background: var(--color-main-background);
 }
 
@@ -1063,7 +1062,7 @@ code {
 	.ui-timepicker-table {
 		th {
 			font-weight: normal;
-			color: nc-lighten($color-main-text, 33%);
+			color: var(--color-text-lighter);
 			opacity: .8;
 			&.periods {
 				padding: 0;
@@ -1085,7 +1084,7 @@ code {
 			}
 
 			&.ui-timepicker-minutes:not(.ui-state-hover) {
-				color: nc-lighten($color-main-text, 33%);
+				color: var(--color-text-lighter);
 			}
 
 			&.ui-timepicker-hours {
@@ -1160,7 +1159,7 @@ code {
 		width: 100%;
 	}
 	.emptycontent {
-		color: nc-lighten($color-main-text, 53%);
+		color: var(--color-text-details);
 		text-align: center;
 		margin-top: 80px;
 		width: 100%;
@@ -1345,7 +1344,7 @@ span.ui-icon {
 	}
 	.scrollarea {
 		overflow: auto;
-		border: 1px solid nc-darken($color-main-background, 14%);
+		border: 1px solid var(--color-background-darker);
 		width: 100%;
 		height: 240px;
 	}
@@ -1357,7 +1356,7 @@ span.ui-icon {
 		}
 	}
 	.taglist li {
-		background: nc-darken($color-main-background, 3%);
+		background: var(--color-background-dark);
 		padding: .3em .8em;
 		white-space: nowrap;
 		overflow: hidden;
@@ -1365,7 +1364,7 @@ span.ui-icon {
 		-webkit-transition: background-color 500ms;
 		transition: background-color 500ms;
 		&:hover, &:active {
-			background: nc-darken($color-main-background, 8%);
+			background: var(--color-background-darker);
 		}
 	}
 	.addinput {
@@ -1480,12 +1479,12 @@ div.crumb {
 	position: relative;
 	text-align: center;
 	.info {
-		color: nc-lighten($color-main-text, 33%);
+		color: var(--color-text-lighter);
 		text-align: center;
 		margin: 0 auto;
 		padding: 20px 0;
 		a {
-			color: nc-lighten($color-main-text, 33%);
+			color: var(--color-text-lighter);
 			font-weight: 600;
 			padding: 13px;
 			margin: -13px;
