--- a/core/css/apps.scss
+++ b/core/css/apps.scss
@@ -853,6 +853,7 @@ $popovericon-size: 16px;
 		flex: 0 0 auto;
 		> button,
 		> a,
+		> span,
 		> .menuitem {
 			cursor: pointer;
 			line-height: $popoveritem-height;
